<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/about_us" />
        <item
            android:id="@+id/nav_service"
            android:icon="@drawable/ic_service"
            android:title="@string/services" />
        <item
            android:id="@+id/nav_partner"
            android:icon="@drawable/ic_partner"
            android:title="@string/partners" />
        <item
            android:id="@+id/nav_article"
            android:icon="@drawable/ic_article"
            android:title="@string/articles" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_contact"
                android:title="@string/contact_us" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="@string/share_files" />
            </group>
        </menu>
    </item>

</menu>

